Fix missing animation on second splash button mobile

--- a/Yak/Yak/ClientApp/src/components/SplashScreen/SplashScreen.scss
+++ b/Yak/Yak/ClientApp/src/components/SplashScreen/SplashScreen.scss
@@ -56,4 +56,7 @@
   .splashButton {
     margin-bottom: 1.5rem;
   }
+  .section-content {
+    padding-top: calc(100vmax / 4);
+  }
 }
